# universal-mcp-chat

./: .gitignore  LICENSE  README.md  config.json  config_lmstudio.json  config_manager.py  managers.py  mcp_chat.py  pyproject.toml  run.py  run_chat copy.py  test_mcp_agent.ipynb
configs/: config.json  config_openai.json
examples/js/: MCP_README.md  books_server.js  package-lock.json  package.json
examples/py/: date_mcp_server.py  pvc_company.py
src/: managers.py  mcp_chat.py  run_chat.py
