[project]
name = "universal-mcp-chat"
version = "0.1.0"
description = "Chat interface designed for developers to test and interact with MCP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.39.0",
    "openai-agents>=0.2.4",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
